--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,5 @@
     <string name="icon_desc">app icon</string>
     <string name="camera_desc">Take photo from camera</string>
     <string name="gallery_desc">Get image from gallery</string>
-    <string name="apply">Apply</string>
-    <string name="draw_rect">Draw rect around object, please</string>
+    <string name="strength">Strength: </string>
 </resources>
