--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="camera_desc">Take photo from camera</string>
     <string name="gallery_desc">Get image from gallery</string>
     <string name="strength">Strength: </string>
+    <string name="send_to">Share image</string>
 </resources>
