--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,13 @@
     <string name="gallery_desc">Get image from gallery</string>
     <string name="strength">Strength: </string>
     <string name="send_to">Share image</string>
+    <string name="blend">Blend mode:</string>
+    <string-array name="blend_modes">
+        <item>Overlay</item>
+        <item>Lighten</item>
+        <item>Normal</item>
+        <item>Screen</item>
+        <item>Darken</item>
+    </string-array>
     <string name="banner_id">ca-app-pub-2894837791244278/3605899343</string>
 </resources>
